@@ -1,5 +1,5 @@
-<!ENTITY version "SVN-20111005">
-<!ENTITY releasedate "Oc5 5, 2011">
+<!ENTITY version "SVN-20111006">
+<!ENTITY releasedate "Oct 6, 2011">
 <!ENTITY copyrightdate "1999-2011"><!-- jhalfs needs a literal dash, not &ndash; -->
 <!ENTITY milestone "7.0">
 <!ENTITY generic-version "development"> <!-- Use "development", "testing", or "x.y[-pre{x}]" -->
